syntax = "proto3";

import "google/protobuf/empty.proto";

package farming;

message HarvestCropRequest {
    string placedItemTileId = 1;
}